# ecom-agents

./: .dockerignore  .gitignore  .pre-commit-config.yaml  APS_IMPLEMENTATION_PLAN.md  APS_IMPLEMENTATION_PLAN_v2.md  APS_IMPLEMENTATION_PLAN_v3.md  CHANGELOG.md  CLAUDE.md  Dockerfile  GIT_AUDIT_REPORT.txt  OPERATION_THUNDERFORGE.md  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_BASELINE.md  SECURITY_TEST_SUITE_PLAN.md  docker-compose.yml  ecommerce-agentic-architecture.md  morphogenetic_agency_v5.md  pyproject.toml  start.ps1  workflows.html
chat-ui/: MEMORY_RESEARCH.md  code_tools.py  requirements.txt  server.py
console/: docker-compose.yml
console/backend/: Dockerfile  pyproject.toml  start.ps1
console/backend/app/: auth.py  code_tools.py  config.py  main.py
console/backend/app/models/: health.py
console/backend/app/routers/: agents.py  app_factory.py  approvals.py  auth.py  autonomy.py  chat.py  evaluations.py  execution.py  graph.py  health.py  holly.py  im.py  morphogenetic.py  scheduler.py  system.py  tools.py  workflows.py
console/backend/app/services/: event_bridge.py  graph_introspection.py  holly_client.py
deploy/: task-definition.json
docs/: Dev_Environment_Spec.md  Development_Procedure_Graph.md  FMEA_Kernel_Invariants.md  Monograph_Glossary_Extract.md  OPERATIONS.md  SIL_Classification_Matrix.md  SYSTEM.md  Task_Manifest.md  architecture.yaml  status.yaml
holly/: __init__.py
src/: agent_registry.py  approval.py  bus.py  checkpointing.py  dynamic_executor.py  dynamic_routing.py  events.py  execution_limits.py  graph.py  serve.py  state.py  (+3 more)
(+337 files in other folders)
